--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="waitbutwhypage1.js"></script>
   </head>
   <body>
-  <p>hello world</p>
+    <p>hello world</p>
+    <span id="table"></span>
   </body>
 </html>
